--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^5.0.4",
     "@astrojs/tailwind": "^5.1.5",
     "astro": "^5.1.8",
     "astro-icon": "^1.1.5",
+    "solid-js": "^1.9.4",
     "tailwindcss": "^3.4.17"
   }
 }
